ggplot2 0.8.8 (2010-XX-XX) ----------------------------------------