@@ -1,1 +1,3 @@
 ggplot2 0.8.8 (2010-XX-XX) ----------------------------------------
+
+* statistics now also respect layer parameter inherit.aes (thanks to bug report by Lorenzo Isella and investigation by Brian Diggs)
